<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_divider_color">



    <FrameLayout
        android:id="@+id/childContentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="85"
                android:orientation="vertical">

                <!-- feedback-->
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_dp20"
                    android:layout_marginRight="@dimen/size_dp20"
                    android:layout_marginTop="@dimen/size_dp15"
                    android:orientation="vertical"
                    >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_dp10"
                        android:text="@string/your_feedback_txt"
                        android:textColor="@color/textColorBlue"
                        android:textSize="@dimen/font_size_14sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_dp4"
                        android:background="@drawable/edittext_rectangle_with_gray_broder">

                        <EditText
                            android:id="@+id/edtFeedback"
                            style="@style/floatingEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_dp98"
                            android:gravity="left|top"
                            android:hint="@string/feedback_txt"
                            android:imeOptions="actionDone"
                            android:background="@null"
                            android:inputType="textMultiLine"
                            android:maxLength="255"/>


                    </LinearLayout>


                </LinearLayout>


                <!-- smiley layout-->
                <com.example.feedbackapp.smilyrating.SmileRating
                    android:id="@+id/ratingView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_dp30"
                    android:layout_marginLeft="@dimen/size_dp20"
                    android:layout_marginRight="@dimen/size_dp20"
                    android:padding="@dimen/size_dp20"
                    >

                </com.example.feedbackapp.smilyrating.SmileRating>



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="15"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/size_dp10"
                    android:layout_marginLeft="@dimen/size_dp30"
                    android:layout_marginRight="@dimen/size_dp30">




                    <TextView
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_dp48"
                        android:background="@color/dark_purple"
                        android:gravity="center"
                        android:layout_margin="@dimen/size_dp15"
                        android:text="@string/submit_label"
                        android:textColor="@color/white">

                    </TextView>


                </LinearLayout>


            </LinearLayout>














        </LinearLayout>

    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

