<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aandroid="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            layout="@layout/layout_toolbar_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="90"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/llParentScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout

                        android:id="@+id/llEdt"
                        style="@style/marginLeftRight_20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="90"
                        android:orientation="vertical">


                        <!--fromdate-edt-->
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_dp20">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">


                                <!--Po Number container-->
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="@dimen/size_dp25"
                                        android:layout_height="@dimen/size_dp25"
                                        android:background="@drawable/custom_gray_circle"
                                        android:gravity="center"
                                        android:text="@string/one"
                                        android:textColor="@color/textColor"
                                        android:textSize="@dimen/font_size_12sp"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/size_dp10"
                                    android:orientation="vertical">



                                    <EditText
                                        android:id="@+id/edtFromDate"
                                        style="@style/floatingEditTextStyle"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:focusableInTouchMode="false"
                                        android:clickable="true"
                                        android:hint="@string/from_date_label"/>






                                </LinearLayout>

                            </LinearLayout>


                        </FrameLayout>


                        <!--to-date-edt-->
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_dp20">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">


                                <!--Po Number container-->
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="@dimen/size_dp25"
                                        android:layout_height="@dimen/size_dp25"
                                        android:background="@drawable/custom_gray_circle"
                                        android:gravity="center"
                                        android:text="@string/two"
                                        android:textColor="@color/textColor"
                                        android:textSize="@dimen/font_size_12sp"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/size_dp10"
                                    android:orientation="vertical">



                                    <EditText
                                        android:id="@+id/edtToDate"
                                        style="@style/floatingEditTextStyle"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:focusableInTouchMode="false"
                                        android:clickable="true"
                                        android:hint="@string/to_date_label"/>






                                </LinearLayout>

                            </LinearLayout>


                        </FrameLayout>

                        <!--save Btn layout-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginLeft="@dimen/size_dp20"
                            android:layout_marginRight="@dimen/size_dp20"
                            android:layout_marginTop="@dimen/size_dp20"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="@dimen/size_dp8"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/btnSearchAppointment"
                                    style="@style/submitButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/btn_search"
                                    android:textSize="@dimen/font_size_16sp"
                                    android:textStyle="bold"/>


                            </LinearLayout>
                        </LinearLayout>


                    </LinearLayout>



                    <TextView
                        android:id="@+id/txtEmptyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:textSize="@dimen/size_dp16"
                        android:visibility="gone"
                        />



                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>



    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>